--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="gameContainer" style="width:400px; height:400px">
+  <div id="scoreBoard">
+    Score: <span id="score"></span>
+  </div>
+  <div id="gameGrid">
+    <div id="pixel1" class="pixel"></div>
+    <div id="pixel2" class="pixel"></div>
+    <!--more pixels-->
+  </div>
+</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
