--- a/main.html
+++ b/main.html
@@ -3,50 +3,33 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div id="gameContainer" style="width: 400px; height: 400px;">
-    <div id="scoreBoard" class="scoreBoard">
-      Score: <span id="score"></span>
-    </div>
-    <div id="gameGrid" class="gameGrid">
-      <!-- 40 x 40 pixels with unique IDs -->
-      <!-- Rows 1-40 -->
-      <div id="pixel0_0" class="pixel"></div>
-      <div id="pixel0_1" class="pixel"></div>
-      <div id="pixel0_2" class="pixel"></div>
-      <!-- ... more pixels ... -->
-      <div id="pixel0_38" class="pixel"></div>
-      <div id="pixel0_39" class="pixel"></div>
-      
-      <!-- Rows 2-39 -->
-      <div id="pixel1_0" class="pixel"></div>
-      <div id="pixel1_1" class="pixel"></div>
-      <div id="pixel1_2" class="pixel"></div>
-      <!-- ... more pixels ... -->
-      <div id="pixel1_38" class="pixel"></div>
-      <div id="pixel1_39" class="pixel"></div>
-      <!-- ... more rows ... -->
-      <div id="pixel38_0" class="pixel"></div>
-      <div id="pixel38_1" class="pixel"></div>
-      <div id="pixel38_2" class="pixel"></div>
-      <!-- ... more pixels ... -->
-      <div id="pixel38_38" class="pixel"></div>
-      <div id="pixel38_39" class="pixel"></div>
-      
-      <!-- Row 40 -->
-      <div id="pixel39_0" class="pixel"></div>
-      <div id="pixel39_1" class="pixel"></div>
-      <div id="pixel39_2" class="pixel"></div>
-      <!-- ... more pixels ... -->
-      <div id="pixel39_38" class="pixel"></div>
-      <div id="pixel39_39" class="pixel"></div>
-    </div>
-  </div>
-  
-  <script type="text/javascript" src="./script.js"></script>
+
+	<!-- the entire body must be written by student -->
+	<div id="gameContainer"></div>
+
+
+	<!-- #scoreContainer contains the scores -->
+	<div id="scoreContainer">
+		<div class="scoreBoard">Your Score: <span id="pointsEarned">0</span></div>
+	</div>
+
+
+	<!-- #onScreenControllers contains the navigation buttons for mobile screens -->
+	<div id="onScreenControllers">
+		<button id="leftButton">◀️</button>
+		<div>
+			<button id="upButton">🔼</button>
+			<button id="downButton">🔽</button>
+		</div>
+		<button id="rightButton">▶️</button>
+	</div>
+	<script type="text/javascript" src="./script.js">
+	</script>
+
 </body>
 
 </html>
